# smart-grid-dl

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh
api/: main.py
app/: dashboard.py
notebooks/: data_cleaning.ipynb  eda.ipynb  feature_engineering.ipynb  paraquet_to_csv.ipynb
src/features/: config.py  engineering.py
src/inference/: predictor.py
src/ingestion/: config.py  pipeline.py
src/models/: config.py
src/models/autoencoder/: ae_feature_scaler.pkl  ae_history.json  ae_metrics.json  ae_model.keras  autoencoder.py  threshold.json
src/models/lstm/: best_params.json  feature_scaler.pkl  history.json  lstm.py  metrics.json  target_scaler.pkl
src/training/: train.py  train_autoencoder.py  train_lstm.py
tests/unit/: test_features.py  test_ingestion.py  test_lstm.py
