[project]
name = "smart-grid-dl"
version = "0.1.0"
description = "Deep learning platform for smart grid power load analysis and forecasting"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "app*"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tensorflow>=2.13.0",
    "optuna>=3.3.0",
    "mlflow>=2.7.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.3.0",
    "streamlit>=1.27.0",
    "plotly>=5.17.0",
    "shap>=0.43.0",
    "loguru>=0.7.0",
    "holidays>=0.36",
    "statsmodels>=0.14.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "app*"]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]